docs(migration): added sass article and removed old notification

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -87,16 +87,6 @@ npm uninstall carbon-components carbon-components-react carbon-icons
 yarn remove carbon-components carbon-components-react carbon-icons
 ```
 
-<InlineNotification>
-
-While this release is still in beta, you may have to keep `carbon-components`,
-`carbon-components-react` and `carbon-icons` installed since `@carbon/react` is
-importing them. In the future, these will be included as peer dependencies in
-the package, and you won't have to install them. A minimum of Node `v14` is also
-required to update.
-
-</InlineNotification>
-
 3. Update package imports. Migration for this can be as easy as
    find-and-replace. Search for anywhere you're importing components or icons
    and update the import to point to `@carbon/react`. Read the next section
@@ -200,7 +190,9 @@ body {
 
 To learn more about getting starting with `Dart Sass`, usage, and importing
 specific Carbon sass, checkout our
-[styles docs](https://github.com/carbon-design-system/carbon/tree/main/packages/styles).
+[styles docs](https://github.com/carbon-design-system/carbon/tree/main/packages/styles)
+or read about it from a developer's perspective in this
+[Medium article](https://medium.com/carbondesign/migrating-from-node-sass-to-sass-eba9db004a3a).
 
 ### Resources
 
@@ -215,7 +207,16 @@ specific Carbon sass, checkout our
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Migrating from node-sass to dart-sass"
-      href="https://sass-lang.com/blog/libsass-is-deprecated#how-do-i-migrate"></ResourceCard>
+      href="https://sass-lang.com/blog/libsass-is-deprecated#how-do-i-migrate">
+      <MdxIcon name="sass" />
+    </ResourceCard>
+  </Column>
+  <Column colLg={4} colMd={4} noGutterSm>
+    <ResourceCard
+      subTitle="One quick way to get ready for Carbon v11"
+      href="https://medium.com/carbondesign/migrating-from-node-sass-to-sass-eba9db004a3a">
+      <MdxIcon name="medium" />
+    </ResourceCard>
   </Column>
 </Row>
 
