--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -1,46 +1,56 @@
 ---
 title: Tooltip
 description:
-  Tooltips provide additional information upon hover or focus. The information
-  should be contextual, useful, and nonessential information.
+  Tooltips display additional information upon hover or focus. The information
+  included should be contextual, helpful, and nonessential while providing that
+  extra ability to communicate and give clarity to a user.
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
 ## Color
 
-### Interactive tooltip
+### Standard tooltip
 
-| Class        | Property         | Color token           |
-| ------------ | ---------------- | --------------------- |
-| Label        | text color       | `$text-secondary`     |
-| Trigger icon | svg              | `$icon-primary`       |
-| Container    | background-color | `$background-inverse` |
-| Text         | color            | `$text-inverse`       |
+| Element               | Property         | Color token           |
+| --------------------- | ---------------- | --------------------- |
+| Label                 | text color       | `$text-secondary`     |
+| Trigger button        | svg              | `$icon-secondary`     |
+| Trigger button: hover | svg              | `$icon-primary`       |
+| Container             | background-color | `$background-inverse` |
+| Text                  | color            | `$text-inverse`       |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
-![Closed and open states for a tooltip](images/tooltip-style-1.png)
+![Closed and open states for a standard tooltip](images/tooltip-style-1.png)
 
-</div>
+</Column>
+</Row>
 
-<Caption>Example of closed and open states for a tooltip</Caption>
+<Caption>
+  Example of closed (top), hover (middle), and focus (bottom) states for a
+  standard tooltip
+</Caption>
 
-### Icon tooltip
+### Icon button tooltip
 
-| Class        | Property         | Color token           |
-| ------------ | ---------------- | --------------------- |
-| Trigger icon | background-color | `$icon-primary`       |
-| Container    | background-color | `$background-inverse` |
-| Text         | color            | `$text-inverse`       |
+| Element   | Property         | Color token           |
+| --------- | ---------------- | --------------------- |
+| Container | background-color | `$background-inverse` |
+| Text      | color            | `$text-inverse`       |
 
-### Definition tooltip
+<Row>
+<Column colLg={8}>
 
-| Class            | Property         | Color token           |
-| ---------------- | ---------------- | --------------------- |
-| Label            | color            | `$text-secondary`     |
-| Dotted underline | border-bottom    | `$interactive`        |
-| Container        | background-color | `$background-inverse` |
-| Text             | color            | `$text-inverse`       |
+![Closed and open states for an icon button tooltip](images/tooltip-style-2.png)
+
+</Column>
+</Row>
+
+<Caption>
+  Example of closed (top), hover (middle), and focus (bottom) states for an icon
+  button tooltip
+</Caption>
 
 ## Typography
 
@@ -56,11 +66,11 @@ Tooltip labels and text should be set in sentence case.
 All tooltip types have a varying height based on the amount of content they
 contain.
 
-### Interactive tooltip
+### Standard tooltip
 
 | Element      | Property      | px / rem | Spacing token |
 | ------------ | ------------- | -------- | ------------- |
-| Container    | max-width     | 240 / 15 | –             |
+| Container    | max-width     | 288 / 18 | –             |
 |              | padding       | 16 / 1   | `$spacing-05` |
 |              | margin-top    | 8 / 0.5  | `$spacing-03` |
 | Trigger icon | height, width | 16 / 1   | –             |
@@ -68,59 +78,42 @@ contain.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for an interactive tooltip](images/tooltip-style-2.png)
+![Structure and spacing measurements for a standard tooltip](images/tooltip-style-3.png)
 
 </div>
 
 <Caption>
-  Structure and spacing measurements for an interactive tooltip | px / rem
+  Structure and spacing measurements for a standard tooltip | px / rem
 </Caption>
 
-### Definition tooltip
-
-| Class     | Property                    | px / rem | Spacing token |
-| --------- | --------------------------- | -------- | ------------- |
-| Container | max-width                   | 176 / 11 | –             |
-|           | padding-top, padding bottom | 8 / 0.5  | `$spacing-03` |
-|           | padding-left, padding-right | 16 / 1   | `$spacing-05` |
-| Underline | border-bottom               | 1px      | –             |
-| Caret     | margin-top                  | 4px      | `$spacing-02` |
-
-<div className="image--fixed">
-
-![Structure and spacing measurements for a definition tooltip](images/tooltip-style-3.png)
-
-</div>
-
-<Caption>
-  Structure and spacing measurements for a definition tooltip | px / rem
-</Caption>
-
-### Icon tooltip
+### Icon button tooltip
 
 | Class     | Property                    | px / rem  | Spacing token |
 | --------- | --------------------------- | --------- | ------------- |
-| Container | max-width                   | 176 / 11  | –             |
+| Container | max-width                   | 208 / 13  | –             |
 |           | padding-left, padding-right | 16 / 1    | `$spacing-05` |
 |           | padding-top, padding-bottom | 2 / 0.125 | `$spacing-01` |
-| Caret     | margin-top                  | 8 / 0.5   | `$spacing-03` |
+| Caret     | margin-top                  | 4 / 0.25  | `$spacing-02` |
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for an icon tooltip](images/tooltip-style-4.png)
+![Structure and spacing measurements for an icon button tooltip](images/tooltip-style-4.png)
 
 </div>
 
 <Caption>
-  Structure and spacing measurements for an icon tooltip | px / rem
+  Structure and spacing measurements for an icon button tooltip | px / rem
 </Caption>
 
 ### Placement
 
-Tooltips should be placed below the tooltip icon unless it is within the height
-of the tooltip box plus 16px / 1rem of the bottom of the page. In that instance,
-the tooltip should appear above the icon or defined word. On mobile, tooltips
-can only appear below the tooltip icon.
+Tooltip directions by default are set to auto. Upon opening, tooltips can detect
+the edges of the browser to properly be placed in view so the container does not
+get cutoff. Tooltips can instead use specific directions and may be
+positioned top, right, bottom, or left to the trigger item. Tooltips should be
+placed at least 16px / 1rem off of the bottom of the page and not bleed off page
+or behind other content. On mobile, tooltips can only appear below the tooltip
+icon.
 
 <div className="image--fixed">
 
