feat: add example links

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -193,6 +193,9 @@ specific Carbon sass, checkout our
 [styles docs](https://github.com/carbon-design-system/carbon/tree/main/packages/styles)
 or read about it from a developer's perspective in this
 [Medium article](https://medium.com/carbondesign/migrating-from-node-sass-to-sass-eba9db004a3a).
+Checkout a
+[live example](https://github.com/carbon-design-system/carbon-tutorial/blob/v11-react-step-5/src/content/LandingPage/_landing-page.scss)
+of mixins and design tokens using the Carbon tutorial.
 
 ### Resources
 
@@ -216,6 +219,13 @@ or read about it from a developer's perspective in this
       subTitle="One quick way to get ready for Carbon v11"
       href="https://medium.com/carbondesign/migrating-from-node-sass-to-sass-eba9db004a3a">
       <MdxIcon name="medium" />
+    </ResourceCard>
+  </Column>
+  <Column colLg={4} colMd={4} noGutterSm>
+    <ResourceCard
+      subTitle="Discover mixins using the Carbon tutorial"
+      href="https://github.com/carbon-design-system/carbon-tutorial/blob/v11-react-step-5/src/content/LandingPage/_landing-page.scss">
+      <MdxIcon name="github" />
     </ResourceCard>
   </Column>
 </Row>
@@ -467,7 +477,37 @@ Here is an example of how you can use the `Theme` component:
 ```
 
 To learn more about how our `Theme` component works with our `useTheme` hook,
-checkout our resource link below.
+checkout our
+[usage docs](https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Theme/Theme.mdx).
+You can also checkout a
+[live example](https://github.com/carbon-design-system/carbon-tutorial/blob/v11-react-step-5/src/App.js)
+of the Carbon Tutorial to see theming in action.
+
+### Resources
+
+<Row className="resource-card-group">
+  <Column colLg={4} colMd={4} noGutterSm>
+    <ResourceCard
+      subTitle="Theme usage example"
+      href="https://github.com/carbon-design-system/carbon-tutorial/blob/v11-react-step-5/src/App.js">
+      <MdxIcon name="github" />
+    </ResourceCard>
+  </Column>
+  <Column colLg={4} colMd={4} noGutterSm>
+    <ResourceCard
+      subTitle="Theme component docs"
+      href="https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Theme/Theme.mdx">
+      <MdxIcon name="github" />
+    </ResourceCard>
+  </Column>
+  <Column colLg={4} colMd={4} noGutterSm>
+    <ResourceCard
+      subTitle="Layer component docs"
+      href="https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Layer/Layer.mdx">
+      <MdxIcon name="github" />
+    </ResourceCard>
+  </Column>
+</Row>
 
 ## Updates to `@carbon/icons-react`
 
@@ -623,23 +663,4 @@ Learn more about our Popover component and it's API below:
 
   </ResourceCard>
 </Column>
-</Row>
-
-### Resources
-
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Layer component docs"
-      href="https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Layer/Layer.mdx">
-      <MdxIcon name="github" />
-    </ResourceCard>
-  </Column>
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Theme component docs"
-      href="https://github.com/carbon-design-system/carbon/blob/main/packages/carbon-react/src/components/Theme/Theme.mdx">
-      <MdxIcon name="github" />
-    </ResourceCard>
-  </Column>
 </Row>
