demos(dataviz): add alluvial chart

--- a/src/pages/data-visualization/complex-charts/index.mdx
+++ b/src/pages/data-visualization/complex-charts/index.mdx
@@ -53,33 +53,9 @@ chart does not show correlations between indicators that are not directly
 connected. This is usually emphasized using a different set of colors for each
 block.
 
-<Row>
-<Column  colLg={12} colMd={8} colSm={4} >
-
-![Alluvial diagram](images/01_adv_alluvial_928.png)
-
-<Caption>Example of alluvial diagram made with two blocks</Caption>
-
-</Column>
-</Row>
-
-<Row>
-<Column  colLg={4} colMd={4} colSm={4} >
-
-![Alluvial node hover detail](images/02_adv_alluvial_detail_288.png)
-
-<Caption>Detail of an alluvial diagram on node hover</Caption>
-
-</Column>
-
-<Column  colLg={4} colMd={4} colSm={4} >
-
-![Alluvial link hover detail](images/03_adv_alluvial_288.png)
-
-<Caption>Detail of an alluvial diagram on link hover</Caption>
-
-</Column>
-</Row>
+<div>
+  <ChartDemoGroup demoGroup={getDemoGroupByTitle('alluvial')} light={true} />
+</div>
 
 ## Heat maps
 
