--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -302,14 +302,14 @@ appropriate chart type.
 
 </OverviewCard>
 </Column>
+
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Network diagram"
     href="/data-visualization/complex-charts#network-diagrams"
-    tag="Design only"
     >
 
-![GATSBY_EMPTY_ALT](images/networkdiagram.svg)
+![GATSBY_EMPTY_ALT](images/network-diagram.svg)
 
 </OverviewCard>
 </Column>
