doc-tile-component

--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -44,22 +44,22 @@ link out to several card patterns within our pattern asset library (PAL)
 ecosystem below:
 
 - [Productive vs. Expressive cards](https://pages.github.ibm.com/cdai-design/pal/components/card/overview/)
-  (Carbon for Cloud & Cognitive).
+  (Carbon for Cloud & Cognitive)
 - [Dashboard cards](https://pages.github.ibm.com/ai-applications/design/patterns/dashboards-v2/overview/#dashboard-cards)
-  (AI Applications Design).
+  (AI Applications Design)
 - [Card](https://www.ibm.com/standards/carbon/components/card) (Carbon for
-  IBM.com).
+  IBM.com)
 
 ### When to use
 
 Tiles are reusable components that provide shortcuts to building cards and other
 modules. Here are some common use cases for when to use tiles:
 
-- Containing a related group of information or actions.
-- Displaying high-level information and metrics on dashboards.
-- Guiding users to take actions or navigate.
-- Presenting options for single or multiple selections.
-- Hiding or showing large amounts of content.
+- To contain related groupings of information or actions
+- To display high-level information and metrics on dashboards
+- To guide users to take actions or navigate
+- To present options for single or multiple selections
+- To hide or show large amounts of content
 
 ## Live demo
 
@@ -253,12 +253,12 @@ selectable, or expandable. These variations of tiles are flexible enough to
 support a variety of different use cases when building more complicating card
 features.
 
-| Variant                   | Purpose                                                                                                   |
-| ------------------------- | --------------------------------------------------------------------------------------------------------- |
-| [Read-only](#read-only)   | For high-level, short, and digestible content pieces such as features, plans, or services offered.        |
-| [Clickable](#clickable)   | For prompting an action, navigating or directing to other pieces of information about the subject matter. |
-| [Selectable](#selectable) | For presenting options to a user in a structured manner, such as a set of pricing plans.                  |
-| [Expandable](#expandable) | For hiding and revealing a large amount of content in order to focus on specific pieces of info.          |
+| Variant                   | Purpose                                                                                                  |
+| ------------------------- | -------------------------------------------------------------------------------------------------------- |
+| [Read-only](#read-only)   | For high-level, short, and digestible content pieces such as features, plans, or services offered        |
+| [Clickable](#clickable)   | For prompting an action, navigating or directing to other pieces of information about the subject matter |
+| [Selectable](#selectable) | For presenting options to a user in a structured manner, such as a set of pricing plans                  |
+| [Expandable](#expandable) | For hiding and revealing a large amount of content in order to focus on specific pieces of info          |
 
 ### Read-only
 
@@ -269,7 +269,7 @@ internal calls-to-action (CTAs), such as a [button](/components/button/usage) or
 a [link](/components/link/usage).
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 ![Example image of read-only tiles.](images/tile-usage-1.png)
 
@@ -284,7 +284,7 @@ contain separate internal CTAs but can contain pictograms, icons, or media such
 as illustrations or images.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 ![Example image of clickable tiles.](images/tile-usage-2.png)
 
@@ -348,15 +348,23 @@ The **width** varies depending on three basic grid modes: wide, narrow, and
 condensed. The **height** varies depending on the amount of content placed
 within it, but still follows the aspect ratio.
 
+<Row>
+<Column colLg={8}>
+
+![Example image of expandable tiles.](images/tile-usage-7.png)
+
+</Column>
+</Row>
+
 [Aspect ratios](https://www.carbondesignsystem.com/guidelines/2x-grid/overview/#aspect-ratio)
 are written out as a formula of width to height, such as 3:2. It’s important to
 remember that while two images can have the same aspect ratio, they can have
 varying images sizes.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
-![Example image of expandable tiles.](images/tile-usage-7.png)
+![Example of $ui-03 token border between fluid buttons](images/tile-usage-8.png)
 
 </Column>
 </Row>
@@ -370,14 +378,6 @@ edge depending on the tiles’ complexity.
 For example: In situations where there are both an icon or pictogram with an
 icon button, place the icon or pictorgram in the lower left corner of the tile
 and move the icon button (action) to the right corner.
-
-<Row>
-<Column colLg={8}>
-
-![Example of $ui-03 token border between fluid buttons](images/tile-usage-8.png)
-
-</Column>
-</Row>
 
 <DoDontRow>
   <DoDont caption="Do left align icon, link, or text when it is by itself.">
