docs(migration): beta 2 docs (#2513)
* fix: add resource card based on feedback

* feat: add initial list of beta 2 changes

* feat(docs): updated some docs for v11 miration

* feat(docs): updated some docs for v11 miration - small typo

* feat: size prop

* feat: classname api

* fix: clean up

* docs(migration): added sass article and removed old notification

* feat: add example links

Co-authored-by: Andrea N. Cardona <andrea.cardona@ibm.com>
Co-authored-by: Scott Strubberg <sstrubberg@us.ibm.com>

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -89,20 +89,36 @@ have introduced two different types of color token layering models—Layer set
 tokens and Contextual layer tokens. You can choose to use one model over the
 other depending on which one makes most sense to migrate to for your product.
 
-See Carbon's
-[color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/#tokens)
-and
-[color implementation](https://v11.carbondesignsystem.com/guidelines/color/implementation)
-guidance for more information.
+See Carbon's guidance below for more information:
 
 <Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Migrating color tokens"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
-      <MdxIcon name="github" />
-    </ResourceCard>
-  </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Color tokens overview"
+    href="https://v11.carbondesignsystem.com/guidelines/color/overview/#tokens">
+
+![Carbon icon](images/carbon.svg)
+
+  </ResourceCard>
+
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Migrating color tokens"
+    href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
+    <MdxIcon name="github" />
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Color implementation"
+    href="https://v11.carbondesignsystem.com/guidelines/color/implementation">
+
+![Carbon icon](images/carbon.svg)
+
+  </ResourceCard>
+
+</Column>
 </Row>
 
 ### Inline theming
