--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -48,6 +48,15 @@ use.
 - **Components:** A new one-package install along with new components and API
   updates.
 - **Grid:** New CSS Grid support to make it easier to build layouts.
+- **Component props:** Changes include updates `className`, event handlers and
+  size props.
+- **Component updates:** While working with IBM Accessibility group we have
+  focused on updating the following accessibility primitives: Notification,
+  Tooltip and Content Switcher.
+- **Changes to `@carbon/icons-react`:** We are updating the default size to `md`
+  automatically included in the `@carbon/react` package.
+- **New Components:** We have some exciting new components! Here they are:
+  Popover, Tooltip, Dialog.
 
 ### What’s not changing
 
@@ -85,5 +94,4 @@ you as your team makes their migration. Dive in and start using v11 right now!
 
   </ResourceCard>
 </Column>
-
 </Row>
