doc-tile-component

--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -260,7 +260,7 @@ features.
 | [Selectable](#selectable) | For presenting options to a user in a structured manner, such as a set of pricing plans                  |
 | [Expandable](#expandable) | For hiding and revealing a large amount of content in order to focus on specific pieces of info          |
 
-### Read-only
+### Read–only
 
 Read-only tiles are used to display information to the user, such as features or
 services offered. Read-only tiles are often seen on marketing pages to promote
@@ -286,7 +286,7 @@ as illustrations or images.
 <Row>
 <Column colLg={12}>
 
-![Example image of clickable tiles.](images/tile-usage-2.png)
+![Example image of clickable tiles](images/tile-usage-2.png)
 
 </Column>
 </Row>
@@ -325,6 +325,14 @@ information. Expandable tiles can contain internal CTAs (like links to docs) if
 they are given their own click targets and the click target is reduced to only
 the chevron icon.
 
+<Row>
+<Column colLg={8}>
+
+![Example image of expandable tiles/ single select tiles](images/tile-usage-5.png)
+
+</Column>
+</Row>
+
 ## Formatting
 
 ### Anatomy
@@ -332,7 +340,7 @@ the chevron icon.
 <Row>
 <Column colLg={8}>
 
-![Example image of expandable tiles.](images/tile-usage-6.png)
+![Tile anatomy](images/tile-usage-6.png)
 
 </Column>
 </Row>
@@ -348,23 +356,17 @@ The **width** varies depending on three basic grid modes: wide, narrow, and
 condensed. The **height** varies depending on the amount of content placed
 within it, but still follows the aspect ratio.
 
-<Row>
-<Column colLg={8}>
-
-![Example image of expandable tiles.](images/tile-usage-7.png)
-
-</Column>
-</Row>
-
 [Aspect ratios](https://www.carbondesignsystem.com/guidelines/2x-grid/overview/#aspect-ratio)
 are written out as a formula of width to height, such as 3:2. It’s important to
 remember that while two images can have the same aspect ratio, they can have
 varying images sizes.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
-![Example of $ui-03 token border between fluid buttons](images/tile-usage-8.png)
+![Example image of expandable tiles.](images/tile-usage-7.png)
+
+<Caption>Tiles get wider as the browser gets larger </Caption>
 
 </Column>
 </Row>
@@ -382,13 +384,13 @@ and move the icon button (action) to the right corner.
 <DoDontRow>
   <DoDont caption="Do left align icon, link, or text when it is by itself.">
 
-![Do left align icon, link, or text when it is by itself.](images/tile-usage-9.png)
+![Do left align icon, link, or text when it is by itself.](images/tile-usage-8.png)
 
   </DoDont>
 
   <DoDont type="dont" caption="Do not right align an icon, link, or text when it is by itself">
 
-![Do not right align an icon, link, or text when it is by itself.](images/tile-usage-10.png)
+![Do not right align an icon, link, or text when it is by itself.](images/tile-usage-9.png)
 
   </DoDont>
 </DoDontRow>
@@ -397,13 +399,13 @@ and move the icon button (action) to the right corner.
 
   <DoDont caption="Do move icon to the right when there is an icon or pictogram.">
 
-![Do move icon to the right when there is an icon or pictogram.](images/tile-usage-11.png)
+![Do move icon to the right when there is an icon or pictogram.](images/tile-usage-10.png)
 
   </DoDont>
 
-  <DoDont type="dont" caption="Do move icon to the right when there is text or link.">
+  <DoDont caption="Do move icon to the right when there is text or link.">
 
-![Do move icon to the right when there is text or link.](images/tile-usage-12.png)
+![Do move icon to the right when there is text or link.](images/tile-usage-11.png)
 
   </DoDont>
 </DoDontRow>
@@ -419,7 +421,7 @@ hierarchical importance like navigation or catalog tiles.
 <Row>
 <Column colLg={12}>
 
-![Example image of how tiles are built on the wide grid.](images/tile-usage-13.png)
+![Example image of how tiles are built on the wide grid.](images/tile-usage-12.png)
 
 <Caption>Example image of how tiles are built on the wide grid.</Caption>
 
@@ -429,7 +431,7 @@ hierarchical importance like navigation or catalog tiles.
 <Row>
 <Column colLg={12}>
 
-![Example image of how tiles are built on the narrow grid.](images/tile-usage-14.png)
+![Example image of how tiles are built on the narrow grid.](images/tile-usage-13.png)
 
 <Caption>Example image of how tiles are built on the narrow grid.</Caption>
 
@@ -439,7 +441,7 @@ hierarchical importance like navigation or catalog tiles.
 <Row>
 <Column colLg={12}>
 
-![Example image of how tiles are built on the condensed grid.](images/tile-usage-15.png)
+![Example image of how tiles are built on the condensed grid.](images/tile-usage-14.png)
 
 <Caption>Example image of how tiles are built on the condensed grid.</Caption>
 
@@ -449,7 +451,7 @@ hierarchical importance like navigation or catalog tiles.
 <Row>
 <Column colLg={12}>
 
-![Example image of how tiles are built on the condensed grid but smaller in width.](images/tile-usage-16.png)
+![Example image of how tiles are built on the condensed grid but smaller in width.](images/tile-usage-15.png)
 
 <Caption>
   Example image of how tiles are built on the condensed grid but smaller in
@@ -473,7 +475,7 @@ version.
 <Row>
 <Column colLg={4}>
 
-![Standard layout for tiles](/images/tile-usage-17.png)
+![Standard layout for tiles](/images/tile-usage-16.png)
 
 <Caption>Standard layout for tiles</Caption>
 
@@ -481,7 +483,7 @@ version.
 
 <Column colLg={4}>
 
-![An example of the standard layout](/images/tile-usage-18.png)
+![An example of the standard layout](/images/tile-usage-17.png)
 
 <Caption>An example of the standard layout</Caption>
 
@@ -491,7 +493,7 @@ version.
 <Row>
 <Column colLg={4}>
 
-![Vertical masonry layout for tiles](/images/tile-usage-19.png)
+![Vertical masonry layout for tiles](/images/tile-usage-18.png)
 
 <Caption>Vertical masonry layout for tiles</Caption>
 
@@ -499,7 +501,7 @@ version.
 
 <Column colLg={4}>
 
-![An example of the vertical masonry layout](images/tile-usage-20.png)
+![An example of the vertical masonry layout](images/tile-usage-19.png)
 
 <Caption>An example of the vertical masonry layout </Caption>
 
@@ -509,7 +511,7 @@ version.
 <Row>
 <Column colLg={4}>
 
-![Horizonal masonry layout for tiles](/images/tile-usage-21.png)
+![Horizonal masonry layout for tiles](/images/tile-usage-20.png)
 
 <Caption>Horizonal masonry layout for tiles</Caption>
 
@@ -517,7 +519,7 @@ version.
 
 <Column colLg={4}>
 
-![An example of the horizonal masonry layout](images/tile-usage-22.png)
+![An example of the horizonal masonry layout](images/tile-usage-21.png)
 
 <Caption>An example of the horizonal masonry layout </Caption>
 
@@ -546,12 +548,12 @@ confused as links or clickable.
 
   <DoDont caption="Do use text or icon for clickable tiles if needed.">
 
-![Do use text or icon for clickable tiles if needed.](images/tile-usage-23.png)
+![Do use text or icon for clickable tiles if needed.](images/tile-usage-22.png)
 
   </DoDont>
   <DoDont type="dont" caption="Do not use link or highlight the icon color for clickable tiles.">
 
-![Do not use link or highlight the icon color for clickable tiles.](images/tile-usage-24.png)
+![Do not use link or highlight the icon color for clickable tiles.](images/tile-usage-23.png)
 
   </DoDont>
 </DoDontRow>
@@ -568,7 +570,7 @@ read-only tiles.
 <Row>
 <Column colLg={8}>
 
-![Clickable, expandable, and selectable tiles are clickable anywhere within the tile.](images/tile-usage-25.png)
+![Clickable, expandable, and selectable tiles are clickable anywhere within the tile.](images/tile-usage-24.png)
 
 <Caption>
   Clickable, expandable, and selectable tiles are clickable anywhere within the
@@ -581,7 +583,7 @@ read-only tiles.
 <Row>
 <Column colLg={8}>
 
-![Read-only tiles are static, except buttons or links .](images/tile-usage-26.png)
+![Read-only tiles are static, except buttons or links .](images/tile-usage-25.png)
 
 <Caption>Read-only tiles are static, except buttons or links .</Caption>
 
@@ -603,7 +605,7 @@ future.
 <Row>
 <Column colLg={8}>
 
-![Clickable, expandable, and selectable tiles are clickable anywhere within the tile.](images/tile-usage-27.png)
+![Clickable, expandable, and selectable tiles are clickable anywhere within the tile.](images/tile-usage-26.png)
 
 </Column>
 </Row>
